--- a/RR/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RR/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,7 +11,7 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input" class="form-control" autocomplete="username" aria-required="true" placeholder="User Name" />
+                <input asp-for="Input.UserName" class="form-control" autocomplete="username" aria-required="true" placeholder="User Name" />
                 <label asp-for="Input.UserName">User Name</label>
                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
             </div>
