--- a/RR/Views/RestaurantReviews/Create.cshtml
+++ b/RR/Views/RestaurantReviews/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RR.Models.CreateReview
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Review";
 }
 
 <h1>Create</h1>
