--- a/RR/Views/RestaurantReviews/Index.cshtml
+++ b/RR/Views/RestaurantReviews/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RestaurantReview>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Reviews";
 }
 
 <h1>List Of Reviews</h1>
