--- a/RR/Views/RestaurantReviews/Details.cshtml
+++ b/RR/Views/RestaurantReviews/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RestaurantReview
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Review Details";
 }
 
 <h1>Details</h1>
